[metadata]
name = btsf
version = 1.0.dev0
description = btsf (for Binary Time Series File) is a package to store your data in a condensed and fast yet flexible way.
long_description = file: README.md
long_description_content_type = text/markdown
author = Philipp Klaus
author_email = philipp.l.klaus@web.de
url = https://github.com/pklaus/btsf
license = GPL
platforms = any
keywords = binary, time series, file, storage
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: System :: Archiving :: Compression
    Topic :: Office/Business :: Financial
    Topic :: Scientific/Engineering

[options]
packages = btsf
zip_safe = True
install_requires = 
    attrs

[options.entry_points]
console_scripts =
    btsf = btsf.cli:main

[options.extras_require]
to_numpy: numpy
to_pandas: pandas
tests: pytest
